caminho do css verificado 2

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html>
 	<head>
 		<title>Curriculo Vitae</title>
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="/Style.css">
 	</head>
 	
 	<body>
@@ -35,8 +35,8 @@
 		<div class="secao">
 			<h2>Dados Profissionais</h2>
 			
-			<p><label>Empresa</label>COMPLEXO ESCOLAR PRIVADO O PENSADOR, HUMPATA HUILA ANGOLA</p>
-			<p><label>Empresa</label>DELSON PC, LUBANGO HUILA ANGOLA</p>
+			<p><label>Empresa </label>COMPLEXO ESCOLAR PRIVADO O PENSADOR, HUMPATA HUILA ANGOLA</p>
+			<p><label>Empresa </label>DELSON PC, LUBANGO HUILA ANGOLA</p>
             
 		</div>
 
