--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html>
 	<head>
 		<title>Curriculo Vitae</title>
-		<link rel="stylesheet" type="text/css" href="css/main.css">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	
 	<body>
